--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./s.jpg" type="image/x-icon">
+
+    <title>Startup 3</title>
+    <link rel="stylesheet" href="/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="main">
+        <!--? Navbar Section  -->
+            <div class="navbar">
+              <div class="logo">
+                <h2>Startup 3</h2>
+              </div>
+              <div class="pages">
+                    <a href="#"><button disabled id="li1">Overview</button> </a>
+                    <a href="#">Prices</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Feedback</a>
+                    <a href="#"><button id="li4">Purchase</button></a>
+              </div>
+            </div>
+        <!--? Box Section  -->
+           
+        </div>
 </body>
 </html>
