created box section with box1 and box 2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,31 @@
               </div>
             </div>
         <!--? Box Section  -->
-           
+            <div class="box">
+              <!--! BOX 1 Section  -->
+                <div class="box1">
+                    <h2>Generate Awesome Web Pages</h2>
+                    <h5>The most important part of the startup is the samples.
+                       The samples form a set of 25 usable pages you can use as is or you can add new blocks</h5>
+                    <button>Learn More</button>
+                    
+                </div>
+              <!--! BOX 2 Section  -->
+                <div class="box2">
+                  <h1>Sign Up Now</h1>
+                  <input type="email" placeholder="Your email">
+                  <input type="password" placeholder="Your password">
+                  <div>
+                    <input type="checkbox" checked id="check">
+                    <span>I agree to the terms of services</span>
+                  </div>
+                  <button id="b1"> Sign In</button>
+                  <hr id="hr">
+                  <span id="or">or</span>
+                  <button id="b2"> Login via Twitter</button>
+                  <p>Do you have an Account? &nbsp;<span id="s1">Sign In</span></p>
+                </div>
+            </div>
         </div>
 </body>
 </html>
